# content_summarization

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
data/: reddit_posts_summarized_Bart.csv  reddit_posts_summarized_T5-Large.csv
src/: app.py  summarize.py
